# 3-semestre

Estrutura de Dados 2/TP2 ed2/: exe  interf+1.c  quicksort.c  selecao.c
Estrutura de Dados 2/TP2 ed2/include/: funcoes.h  inter2f.h  interf+1.h  selecao.h
Programação Funcional/curso/: aula01.hs  aula02.hs  aula03.hs  aula04.hs  aula05.hs  aula06.hs  aula07.hs  aula08.hs  ex01.hs  ex02.hs
Programação Funcional/praticas/p01/: hello.hs
Programação Funcional/praticas/p02/: main.hs  vendas.hs
Programação Funcional/praticas/p02/2024-2_A02-vendas-MCMMoreira-main/: README.md  config.cabal
Programação Funcional/praticas/p02/2024-2_A02-vendas-MCMMoreira-main/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Programação Funcional/praticas/p02/2024-2_A02-vendas-MCMMoreira-main/dist-newstyle/packagedb/ghc-9.4.8/: package.cache  vendas-1.0.0-inplace.conf
Programação Funcional/praticas/p02/2024-2_A02-vendas-MCMMoreira-main/src/: Main.hs  Vendas.hs
Programação Funcional/praticas/p02/2024-2_A02-vendas-MCMMoreira-main/test/: MainSpec.hs
Programação Orientada a Objetos/TP1/: Makefile  aeronave.d  batalha.d  campanha.d  date.d  exe  exercito.d  infantaria.d  main.d  unidade.d  veiculo.d
Programação Orientada a Objetos/TP1/src/: aeronave.cpp  batalha.cpp  campanha.cpp  date.cpp  exercito.cpp  infantaria.cpp  main.cpp  unidade.cpp  veiculo.cpp
TP1/: arvoreb.c  arvorebest.c  arvorebin.c  arvorebin.h  asi.c  asi.h  funcoes.h
TP2/: funcoes.c  inter2f.c  main.c
TP2/include/: quicksort.h
(+13 files in other folders)
